public/style.css
/* ... */
#shopBody {
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 1000px;
    width: 1000px;
    position: relative;
    border: 2px solid black;
    z-index: 1;
}
.exitShop {
    background-color: transparent;
    border: none;
    height: 50%;
    font-size: 1.3em;
    transition: .2s
}
.exitShop:hover {
    color: red;
    transition: .2s
}
.top-shop {
    border-bottom: 2px solid black;
    height: 13%;
    width: 100%;
    color: black;
    display: flex;
    justify-content: right;
    align-items: top;
    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNb1zEtu2yc01x_I-S8ezGD9Nlwm3KfLnMXA&usqp=CAU');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 58%;
    
}
.item {
    height: 36px;
}
.item:hover {
    cursor: pointer;
}
.top-shop h2 {
    text-align: center;
    width: 80%;
    margin: 0;
}
.healPokemon {
    width: 100%;
    background-color: red;
    color: black;
    height: 4%;
    transition: .2s;
    margin: 0;
    height:  8%;
    border: none;
    border-top: 2px solid black;

}
.healPokemon:hover {
    background-color: white;
    color: red;
    transition: .2s
}
.filterShop {
    width: 100%;
    border-top: 3px solid black;
    border-bottom: 3px solid black;
    height: 6%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}
.shop {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 75%;
}
.shopItems {
    width: 40%;
    height: auto;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}

.shopItems div {
    max-width: 100%;
    padding: .5rem;
    height: 36px;
    font-size: 1.1em;
}

.shopItems div:hover {
    transition: .2s;
    color: white;
    background-color: #000709;
}

.displayItem {
    border-left: 3px solid black;
    width: 60%;
    display:flex;
    flex-direction: column;
    gap: 20px;
    align-items: center;
}
.itemDesc {
    width: 80%
}
.costBox {
    height: 60%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
}
.amountInput {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 50px;
    height: 70px;
    border-left: 1px solid black;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
}
.amountInput::-webkit-inner-spin-button,
.amountInput::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
.costItem {
    color: green
}
.purchaseButton {
    background-color: green;
    width: 120px;
    height: 70px;
    color: white;
    transition: .2s
}
.purchaseButton:hover {
    background-color: white;
    color: green;
    transition: .2s
}

.confirmHeal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 400px;
    height: 200px;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    z-index: 1000;
    border: 2px solid black;
    box-shadow: 0 0 10px 0 red;
}

.confirmBuy {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 600px;
    height: 200px;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    z-index: 1000;
    border: 2px solid black;
    box-shadow: 0 0 10px 0 rgb(38, 255, 0);
}
.confirmBuy h3 {
    text-align: center;
    display: flex;
    justify-content: center;
    margin: 0;
}

.inputBox {
    width: 16%;
    display: flex;
}
.increaseDecrease {
    display: flex;
    flex-direction: column;
}
.increaseDecrease button {
    height: 50%
}
.healOptions {
    display: flex;
    justify-content: space-around;
    width: 100%;
}
.healOptions button {
    width: 120px;
    height: 80px;
    transition: .2s;
}
.yesHeal:hover {
    border: 2px solid black;
    box-shadow: 0 0 15px 0 green;
    transition: .2s;
}
.noHeal:hover {
    border: 2px solid black;
    box-shadow: 0 0 15px 0 red;
    transition: .2s;
}

.filterOptions {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 10%;
    border-bottom: 2px solid black;
}

.filter {
    width: 78%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    border-left: 2px solid black;
}
.cashBox {
    width: 22%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.cashBox p {
    font-size: 20px;
}
.cashBox p span {
    color: green
}
.filter div {
    flex-wrap: wrap;
    height: 50%;
    width: 25%;
    background-color: white;
    color: black;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: .2s
}
.filter div:hover {
    background-color: black;
    color: white;
    transition: .2s
}




::-webkit-scrollbar {
    width: 20px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: gray;
    opacity: .3;
  }

.pokemonPage {
    height: 1000px;
    width: 1000px;
    padding-top: 5px;
    background-image: linear-gradient(#6f0808, #b03103, #000709);
}

.pokemonBody {
    height: 90%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
}

.pokemonFooter {
    height: 10%;
    width: 100%;
   
}
.pokemonFooter button {
    height: 100%;
    width: 120px;
    border: none;
    padding: 0;
    transition: .2s
}

.pokemonFooter button:hover {
    transition: .2s;
    color: white;
    background-color: black;
}
/* ... */

